fixing layout issue with profile dropdown

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -227,8 +227,8 @@ form#pattern_search {
   border-radius: 0 0 4px 4px;
   position: fixed;
   background-color: white;
-  top: 38px;
-  left: 75.7%;
+  top: 40.4px;
+  left: 82.1%;
   padding: 20px 20px 10px 20px;
   -moz-box-shadow:    0px 0px 2px 0px #b2b2b2;
   -webkit-box-shadow: 0px 0px 2px 0px #b2b2b2;
